# agents1

1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  4_lab4_questions_gemini_google_search_editor.ipynb
2_openai/deep_research_using_google_search/: email_agent.py  google_search_agent.py  llm_as_judge.py  planner_agent.py  search_agent.py  writer_agent.py
3_crew/coder1/: README.md  pyproject.toml
3_crew/coder1/output/: code_and_output.txt
3_crew/coder1/src/coder1/: crew.py  main.py
3_crew/coder1/src/coder1/config/: agents.yaml
3_crew/debate1/: pyproject.toml
3_crew/engineering_team1/: README.md  pyproject.toml
3_crew/engineering_team1/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/engineering_team1/output/.gradio/flagged/: dataset1.csv  dataset2.csv  dataset3.csv  dataset4.csv
3_crew/engineering_team1/src/engineering_team1/: crew.py  main.py
3_crew/engineering_team1/src/engineering_team1/config/: agents.yaml
3_crew/financial_researcher1/: pyproject.toml
3_crew/financial_researcher1/output/: report.md
3_crew/financial_researcher1/src/financial_researcher1/: crew.py  main.py
3_crew/financial_researcher1/src/financial_researcher1/config/: agents.yaml
3_crew/stock_picker1/: README.md  pyproject.toml
3_crew/stock_picker1/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/stock_picker1/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker1/src/stock_picker1/: crew.py  main.py
3_crew/stock_picker1/src/stock_picker1/tools/: push_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal  sidekick.py
4_langgraph/sandbox/: dinner.md
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent1.py  agent10.py  agent11.py  agent12.py  agent13.py  agent14.py  agent15.py  agent16.py  agent17.py  agent18.py  agent19.py  agent2.py  agent20.py  agent3.py  agent4.py  agent5.py  agent6.py  agent7.py  agent8.py  agent9.py  creator.py  idea1.md  idea10.md  idea11.md  idea12.md  idea13.md  idea14.md  idea15.md  idea17.md  idea18.md  idea19.md  idea2.md  idea3.md  idea4.md  idea5.md  idea6.md  (+4 more)
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  mcp_params.py  tracers.py  traders.py  trading_floor.py
(+8 files in other folders)
