[project]
name = "coder1"
version = "0.1.0"
description = "coder1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
coder1 = "coder1.main:run"
run_crew = "coder1.main:run"
train = "coder1.main:train"
replay = "coder1.main:replay"
test = "coder1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
