[project]
name = "engineering_team1"
version = "0.1.0"
description = "engineering_team1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
    "gradio>=5.42.0",
]

[project.scripts]
engineering_team1 = "engineering_team1.main:run"
run_crew = "engineering_team1.main:run"
train = "engineering_team1.main:train"
replay = "engineering_team1.main:replay"
test = "engineering_team1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
