[project]
name = "financial_researcher1"
version = "0.1.0"
description = "financial_researcher1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
financial_researcher1 = "financial_researcher1.main:run"
run_crew = "financial_researcher1.main:run"
train = "financial_researcher1.main:train"
replay = "financial_researcher1.main:replay"
test = "financial_researcher1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
