[project]
name = "stock_picker1"
version = "0.1.0"
description = "stock_picker1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
stock_picker1 = "stock_picker1.main:run"
run_crew = "stock_picker1.main:run"
train = "stock_picker1.main:train"
replay = "stock_picker1.main:replay"
test = "stock_picker1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
